--- a/orbit-new/package.json
+++ b/orbit-new/package.json
@@ -6,20 +6,35 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev:android": "npx expo run:android",
+    "dev:ios": "npx expo run:ios",
+    "dev:build:android": "eas build --platform android --profile development",
+    "dev:build:ios": "eas build --platform ios --profile development"
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/stack": "^7.6.7",
+    "@supabase/supabase-js": "^2.84.0",
     "expo": "~54.0.25",
+    "expo-build-properties": "~1.0.9",
+    "expo-device": "~8.0.9",
+    "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.13",
     "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.554.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-ble-advertiser": "^0.0.17",
+    "react-native-ble-plx": "^3.5.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "~1.11.0",
+    "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1"
+    "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
+    "uuid": "^13.0.0"
   },
   "private": true
 }
