--- a/orbit-new/package.json
+++ b/orbit-new/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/stack": "^7.6.7",
     "expo": "~54.0.25",
