Revert "Version control"
This reverts commit 9958914cabdc0aeaa2463eab4c6feb87100a713f.

--- a/orbit-new/app.json
+++ b/orbit-new/app.json
@@ -13,15 +13,7 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true,
-      "infoPlist": {
-        "NSBluetoothAlwaysUsageDescription": "We need Bluetooth to discover people nearby.",
-        "NSBluetoothPeripheralUsageDescription": "We use Bluetooth to broadcast a short proximity identifier.",
-        "NSLocationWhenInUseUsageDescription": "We use your location to show where encounters happened on the map.",
-        "UIBackgroundModes": [
-          "bluetooth-central"
-        ]
-      }
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
